--- a/packages/hello-world-react/tsconfig.build.json
+++ b/packages/hello-world-react/tsconfig.build.json
@@ -1,9 +1,7 @@
 {
   "extends": "@web-components-monorepo-starter/typescript-config/react-library.json",
   "compilerOptions": {
-    "noEmit": true,
     "outDir": "dist"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"]
 }
