--- a/packages/hello-world/tsconfig.build.json
+++ b/packages/hello-world/tsconfig.build.json
@@ -1,9 +1,8 @@
 {
   "extends": "@web-components-monorepo-starter/typescript-config/base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "noEmit": true
+    "outDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "src/**/*.stories.ts"]
 }
