--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "type-check": "turbo type-check"
   },
   "devDependencies": {
-    "lefthook": "^1.6.1",
+    "lefthook": "1.6.18",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "turbo": "latest",
