--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
       - dependency-name: '@types/eslint'
       - dependency-name: '@typescript-eslint/eslint-plugin'
       - dependency-name: '@typescript-eslint/parser'
+      - dependency-name: 'lefthook'
     groups:
       dependencies:
         patterns:
